--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+appdirs==1.4.4
 certifi==2022.6.15.1
 click==8.1.3
+distlib==0.3.6
 Flask==2.2.2
+Flask-Cors==3.0.10
 gunicorn==20.1.0
 itsdangerous==2.1.2
-jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.1.0
 MarkupSafe==2.1.1
@@ -12,6 +14,8 @@ pandas==1.4.4
 python-dateutil==2.8.2
 pytz==2022.2.1
 scikit-learn==1.1.2
-threadpoolctl==3.1.0
+scipy==1.9.1
+six==1.16.0
+virtualenv==20.16.5
 Werkzeug==2.2.2
 wincertstore==0.2
